--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,92 +1,197 @@
+.div--center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 
-  
-  .div--center {
-    margin: 0;
+ 
+}
+
+
+.div--center-border {
+  border: 1px solid rgb(202, 202, 202);
+  border-radius: 10px;
+}
+
+.user--size {
+  max-width: 100px;
+  display: inherit;
+}
+
+@media (max-width: 374.98px) {
+  .w-card {
+    width: 18rem;
+  }
+
+  .user--size {
+    max-width: 100px;
+  }
+
+  .user_icon--position-absolute {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    left: 35% !important;
+    top: -60px;
+  }
+}
 
-    background-color: rgb(211 211 211);
+@media (min-width: 375px) and (max-width: 575.98px) {
+  .user--size {
+    max-width: 100px;
   }
 
-  .div--center-border{
-      border: 1px solid rgb(202, 202, 202);
-      border-radius: 10px;
-  }
-
-
-
-  @media (max-width: 374.98px) { 
-
-    .user--size{
-        max-width: 100px;
-    }
-
-    .user_icon--position-absolute{
-      position: absolute;
-      left: 35% !important;
-      top: -60px;
-    }
-  }
-
-
-  @media (min-width:375px) and (max-width: 575.98px) { 
-
-    .user--size{
-        max-width: 100px;
-    }
-
-    .user_icon--position-absolute{
-      position: absolute;
-      left: 30%;
-      top: -60px;
-    }
-  }
-
-
-  @media (min-width:576px) and (max-width: 767.98px) { 
-    .user--size{
-        max-width: 100px;
-    }
-
-    .user_icon--position-absolute{
-      position: absolute;
-      left: 35% !important; 
-      top: -60px;
-    }
-
-    .mt-responsive{
-      margin-top: 20px !important;
-    }
-  }
-  
-
-  @media (min-width: 768px) and (max-width: 991.98px) {
-    .mt-responsive{
-      margin-top: 20px !important;
-    }
-   }
-  
-  
-  @media (max-width: 992px) and (max-width: 1199.98px) { 
-    .mt-responsive{
-      margin-top: 20px !important;
-    }
-  }
-  
-
-  @media (max-width: 1399.98px) {
-
-    .user--size{
-      max-width: 120px;
-  }
-
-  .user_icon--position-absolute{
+  .user_icon--position-absolute {
     position: absolute;
-    left: 30% !important; 
+    left: 34% !important;
+    top: -60px;
+  }
+
+  .div--center-images{
+    top: 33% !important;
+  }
+
+  .text-link:hover {
+    font-size: 18px;
+    color:red;
+    font-weight: 600;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .user--size {
+    max-width: 100px;
+  }
+
+  .user_icon--position-absolute {
+    position: absolute;
+    left: 35% !important;
+    top: -60px;
+  }
+
+  .text-link:hover {
+    font-size: 18px;
+    color:red;
+    font-weight: 600;
+  }
+
+
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .user--size {
+    max-width: 120px;
+  }
+  
+
+  .w-card {
+    width: 25rem !important;
+  }
+
+  .user_icon--position-absolute {
+    position: absolute;
+    left: 35% !important;
+    top: -70px;
+  }
+
+  .text-link:hover {
+    font-size: 18px;
+    color:red;
+    font-weight: 600;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1179px) {
+  .user--size {
+    max-width: 140px;
+  }
+
+  .w-card {
+    width: 25rem !important;
+  }
+
+  .user_icon--position-absolute {
+    position: absolute;
+    left: 35% !important;
+    top: -100px;
+  }
+
+  .img-menu{
+    width: 150px;
+  }
+
+  .text-link:hover {
+    font-size: 18px;
+    color:red;
+    font-weight: 600;
+  }
+}
+
+@media (min-width: 1180px) and (max-width: 1399.98px) {
+  .user--size {
+    max-width: 140px;
+  }
+
+  .user_icon--position-absolute {
+    position: absolute;
+    left: 35% !important;
+    top: -100px;
+  }
+
+  .w-card {
+    width: 28rem !important;
+  }
+
+  .img-menu{
+    width: 110px;
+  }
+
+  .text-link p {
+    font-size: 22px;
+  }
+
+  .text-link:hover {
+    font-size: 25px;
+    color:red;
+    font-weight: 600;
+  }
+
+
+}
+
+@media (min-width: 1500px) {
+  .user--size {
+    max-width: 120px;
+  }
+
+  .user_icon--position-absolute {
+    position: absolute;
     top: -80px;
   }
 
-   }
+  .w-card {
+    width: 25rem !important;
+  }
+
+
+
+  
+  /* menu item */
+
+  .img-menu{
+    width: 150px;
+  }
+
+  .text-link p {
+    font-size: 25px;
+  }
+
+   .text-link p:hover {
+    font-size: 25px;
+    color:red;
+    font-weight: 600;
+  }
+
+
+
+}
