--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,4 +1,4 @@
-ul {
+#navbar-desktop ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -9,19 +9,25 @@ ul {
     overflow: auto;
   }
   
-  li a {
+  #navbar-desktop li a {
     display: block;
     color: #000;
     padding: 8px 16px;
+
     text-decoration: none;
   }
   
-  li a.active {
+  #navbar-desktop li a.active {
     background-color: #04AA6D;
     color: white;
   }
   
-  li a:hover:not(.active) {
+  #navbar-desktop li a:hover:not(.active) {
     background-color: #555;
     color: white;
+  }
+
+  .fw-500{
+    font-weight: 500 !important;
+    color: rgba(255,255,255,.55) !important;
   }
