--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,11 +2,12 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 20%;
+    width: 5%;
     background-color: #f1f1f1;
     position: fixed;
-    height: 100%;
+    max-height: 70%;
     overflow: auto;
+    border: 1xp solid black;
   }
   
   #navbar-desktop li a {
@@ -20,6 +21,7 @@
   #navbar-desktop li a.active {
     background-color: #04AA6D;
     color: white;
+    font-size: 20px;
   }
   
   #navbar-desktop li a:hover:not(.active) {
@@ -31,3 +33,9 @@
     font-weight: 500 !important;
     color: rgba(255,255,255,.55) !important;
   }
+
+  .ft-25{
+    font-size: 25px;
+  }
+
+  
