--- a/css/navbar.css
+++ b/css/navbar.css
@@ -15,7 +15,7 @@
   margin:0px;
  text-align: center;
 font-size:20px;
-font-family: 'Strait', sans-serif;
+font-family: 'tahoma bold';
 
 }
 
@@ -145,7 +145,7 @@ text-decoration:none;
 -webkit-transform:translateZ(0) scale(1,1);
 -webkit-transition:all .14s linear;
 transition:all .14s linear;
-font-family: 'Strait', sans-serif;
+font-family: 'tahoma', sans-serif;
 border-top:1px solid #f2f2f2;
 
 text-shadow: 1px 1px 1px  #fff;  
@@ -171,7 +171,7 @@ position:relative;
 display:table-cell;
 vertical-align:middle;
 width:190px;
-font-family: 'Titillium Web', sans-serif;
+font-family: 'tahoma';
 }
 
 .main-menu .share {
@@ -228,7 +228,7 @@ transition: all 0.1s ease-in-out, width 0, height 0, top 0, left 0;
 a:hover,a:focus {
 text-decoration:none;
 border-left:0px solid #F7F7F7;
-
+font-family: 'tahoma bold';
 
 
 }
@@ -299,9 +299,4 @@ background: transparent;
 width: 100%;
 height: 100%;
 }
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
-}
+
