--- a/css/lista.css
+++ b/css/lista.css
@@ -1,10 +1,16 @@
-body {
-    background-color: #bdc3c7;
-}
+
 .table-fixed {
     width: 100%;
-    background-color: #f3f3f3;
 }
+
+.table-fixed thead {
+    background-color: #EDEDED;
+    text-transform: uppercase;
+    color: #878788;
+    font-size: 12px;
+    text-align: center;
+}
+
 .table-fixed tbody {
     height: 200px;
     overflow-y: auto;
@@ -18,6 +24,9 @@ body {
 }
 .table-fixed thead tr th {
     float: left;
-    background-color: #f39c12;
-    border-color: #e67e22;
 }
+
+#busquedas input::placeholder {
+    color:#b3b3b3 !important; 
+}
+
